mutants.out.old/log/replace_set_parameters_expectations_with_Default__default()_in_src_test_parameters_set_params.rs_28.log

*** replace set_parameters_expectations with Default::default() in src/test/parameters/set_params.rs:28
*** --- src/test/parameters/set_params.rs
+++ replace set_parameters_expectations with Default::default()
@@ -21,51 +21,17 @@
     m0: Generic<PinTransaction>,
     m1: Generic<PinTransaction>,
 }
 
 fn set_parameters_expectations(
     parameters: &Parameters,
     persistence: Persistence,
 ) -> SetParameterExpectations {
-    let persistence = u8::from(persistence);
-    let bytes = parameters.to_bytes();
-    let serial = Serial::<u8>::new(&[
-        SerialTransaction::write(persistence),
-        SerialTransaction::write(bytes[0]),
-        SerialTransaction::write(bytes[1]),
-        SerialTransaction::write(bytes[2]),
-        SerialTransaction::write(bytes[3]),
-        SerialTransaction::write(bytes[4]),
-        SerialTransaction::read(0xC0),
-        SerialTransaction::read(bytes[0]),
-        SerialTransaction::read(bytes[1]),
-        SerialTransaction::read(bytes[2]),
-        SerialTransaction::read(bytes[3]),
-        SerialTransaction::read(bytes[4]),
-    ]);
-    let aux = Pin::new(&vec![
-        // for programming ready check, await high level on AUX.
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(High),
-        // for return to normal mode, await high level on AUX.
-        PinTransaction::get(Low),
-        PinTransaction::get(High),
-    ]);
-    let m0 = Pin::new(&vec![PinTransaction::set(Low)]);
-    let m1 = Pin::new(&vec![PinTransaction::set(Low)]);
-    SetParameterExpectations {
-        serial,
-        aux,
-        m0,
-        m1,
-    }
+Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 use proptest::prelude::*;
 proptest! {
     #![proptest_config(ProptestConfig {
         cases: 10000,
         .. ProptestConfig::default()
     })]

*** run /home/rafaelbachmann/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo check --tests
*** cargo result: Exited(101) in 0.202s2qSz5l)
warning: unused imports: `High`, `Low`, `Mock as Pin`, `Transaction as SerialTransaction`
  --> src/test/parameters/set_params.rs:10:9
   |
10 |         Mock as Pin,
   |         ^^^^^^^^^^^
11 |         State::{High, Low},
   |                 ^^^^  ^^^
...
14 |     serial::{Mock as Serial, Transaction as SerialTransaction},
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `SetParameterExpectations: std::default::Default` is not satisfied
  --> src/test/parameters/set_params.rs:29:1
   |
29 | Default::default() /* ~ changed by cargo-mutants ~ */
   | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `SetParameterExpectations`

For more information about this error, try `rustc --explain E0277`.
warning: `ebyte-e32` (lib test) generated 1 warning
error: could not compile `ebyte-e32` due to previous error; 1 warning emitted
